--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     "issues": "https://github.com/nitsan-technologies/ns_news_slider/issues"
   },
   "require": {
-    "typo3/cms-core": "^6.0 || ^7.0 || ^8.0  || ^9.0 || ^10.0  || ^11.0 ",
-    "georgringer/news": ">=3.0.0"
+    "typo3/cms-core": "^12",
+    "georgringer/news": ">=11.0.0"
   },
   "autoload": {
     "psr-4": {
