--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "require": {
     "typo3/cms-core": "^6.0 || ^7.0 || ^8.0  || ^9.0 || ^10.0  || ^11.0 ",
-    "georgringer/news": ">=3.0.0"
+    "georgringer/news": ">=3.0.0 <=10.0.3"
   },
   "autoload": {
     "psr-4": {
