--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "issues": "https://github.com/nitsan-technologies/ns_news_slider/issues"
   },
   "require": {
-    "typo3/cms-core": "^12",
-    "georgringer/news": ">=11.0.0"
+    "typo3/cms-core": "^12 || ^13"
   },
   "autoload": {
     "psr-4": {
