--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "issues": "https://github.com/nitsan-technologies/ns_news_slider/issues"
   },
   "require": {
-    "typo3/cms-core": "^12 || ^13"
+    "typo3/cms-core": "^12 || ^13",
+    "georgringer/news": "^12"
   },
   "autoload": {
     "psr-4": {
